<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>tutorials</artifactId>
    <groupId>io.jexxa.tutorials</groupId>
    <version>3.1.4-SNAPSHOT</version>
  </parent>

  <artifactId>bookstorej16</artifactId>
  <name>BookStoreJ16</name>

  <properties>
    <maven.javadoc.skip>true</maven.javadoc.skip>
    <maven.compiler.release>16</maven.compiler.release>
    <main.class>io.jexxa.tutorials.bookstorej16.BookStoreJ16Application</main.class>
    <jmx.port>1091</jmx.port>
  </properties>


  <dependencies>
    <!-- dependencies for parsing commandline parameters -->
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>${commons.cli.version}</version>
    </dependency>

    <!-- dependencies for JDBCAdapter -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>${postgres.version}</version>
    </dependency>

    <dependency>
      <groupId>io.jexxa.addend</groupId>
      <artifactId>Addend</artifactId>
      <version>1.1.0</version>
    </dependency>
    <!-- dependencies for tests -->
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <version>${junit.platform.launcher.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.jupiter.engine.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.jupiter.params.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.jexxa.jexxatest</groupId>
      <artifactId>jexxa-test</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>

        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>${main.class}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-shade-plugin</artifactId> <!-- Extend configuration from parent-pom by main class-->
        <executions>
          <execution>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>${main.class}</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin> <!-- build a docker image -->
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>${maven.jib.plugin}</version>
        <configuration>
          <from>
            <image>eclipse-temurin:17-alpine</image>
          </from>
          <to>
            <image>${project.groupId}/${project.artifactId}:${project.version}</image>
            <tags>
              <tag>latest</tag>
            </tags>
          </to>
          <container>
            <creationTime>
              USE_CURRENT_TIMESTAMP
            </creationTime>

            <!--- The jexxa-application.properties used in this tutorial is fine for local execution. Within a container,
             we have to define URLs to external infrastructure such as ActiveMQ or the database. To overwrite jexxa-application.properties
             you can use java system properties which can be set as JVM flags.
             -->
            <jvmFlags>
              <!--- Uncomment following lines to configure jdbc parameters -->
              <!--- <jvmFlag>
                -Dio.jexxa.jdbc.url=jdbc:postgresql://172.17.0.4:5432/io.jexxa.tutorials.bookstorej16
              </jvmFlag>
              <jvmFlag>
                -Dio.jexxa.jdbc.autocreate.database=jdbc:postgresql://172.17.0.4:5432/postgres
              </jvmFlag> -->

              <!--- Enable for JMX support.
               Notes:  - jmxremote.rmi.port and jmxremote.port must be identical in order to access application in docker container
               - exposed port in section <ports> must be identical to jmxremote.port. Otherwise port forwarding will not work with jmx
               -->
              <jvmFlag>
                -Dcom.sun.management.jmxremote.local.only=false
              </jvmFlag>
              <jvmFlag>
                -Dcom.sun.management.jmxremote
              </jvmFlag>
              <jvmFlag>
                -Dcom.sun.management.jmxremote.port=${jmx.port}
              </jvmFlag>
              <jvmFlag>
                -Dcom.sun.management.jmxremote.rmi.port=${jmx.port}
              </jvmFlag>
              <jvmFlag>
                -Dcom.sun.management.jmxremote.local.only=false
              </jvmFlag>
              <jvmFlag>
                -Dcom.sun.management.jmxremote.authenticate=false
              </jvmFlag>
              <jvmFlag>
                -Dcom.sun.management.jmxremote.ssl=false
              </jvmFlag>
              <jvmFlag>
                -Djava.rmi.server.hostname=localhost
              </jvmFlag>
              <jvmFlag>
                -Dio.jexxa.jdbc.url=jdbc:postgresql://172.17.0.4:5432/bookstorej16
              </jvmFlag>
            </jvmFlags>

            <!--- Enable for jdbc support  -->
            <args>
              <arg>
                -jdbc
              </arg>
            </args>

            <ports>
              <port>7500</port>
              <port>${jmx.port}</port>
            </ports>
          </container>
        </configuration>
      </plugin>

    </plugins>
  </build>
</project>
